--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,8 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
-    - name: Install xmllint
-      run: sudo apt install bison
+    - name: Install deps
+      run: sudo apt install bison flex
     - name: autoconf
       run: sh autogen.sh
       shell: sh
