--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Install deps
-      run: sudo apt install bison flex libgpg-error-dev
+      run: sudo apt install bison flex libgpg-error-dev libmhash-dev
     - name: autoconf
       run: sh autogen.sh
       shell: sh
