--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Ubuntu CI
+name: Aide CI Linux
 
 on: [push]
 
@@ -16,7 +16,6 @@ jobs:
       run: sudo apt install bison flex libgpg-error-dev libmhash-dev libpq-dev libcap-dev
     - name: autoconf
       run: sh autogen.sh
-      shell: sh
     - name: configure
       run: ./configure
     - name: make
