--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
     - name: autoconf
       run: sh autogen.sh
     - name: configure
-      run: ./configure
+      run: ./configure --with-selinux --with-posix-acl --with-capabilities --with-e2fsattrs --with-psql
     - name: make
       run: make
     - name: make check
