--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
     - name: autoconf
       run: sh autogen.sh
     - name: configure
-      run: ./configure --disable-static --with-zlib
+      run: ./configure
     - name: make
       run: make
     - name: make check
